# mikel-german-tts-pipeline

./: .env.local.example  .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt  synthesize_german_audio.py  tts_config.example.json
data/: custom_sentences.template.md
data/parts/: README.md
data/parts/part_01/: sentences.md
data/parts/part_02/: sentences.md
docs/: google-cloud-setup-fa.md  learning-method-fa.md  project-roadmap.md  provider-status-notes.md
scripts/: build_gradium_shadow_sections.py  build_yourvoic_shadow_sections.py  run_groq_proxy.py
tests/: test_parser.py
tts_pipeline/: __init__.py  cli.py  config.py  models.py  parser.py  section_audio.py
tts_pipeline/providers/: __init__.py  azure_speech.py  base.py  google_cloud.py  gradium.py  groq_proxy.py  yourvoic.py
