[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mikel-german-tts-pipeline"
version = "0.1.0"
description = "A modular German-learning TTS pipeline with pluggable providers and section audio builders."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "azure-cognitiveservices-speech>=1.42.0",
  "fastapi>=0.115.0",
  "google-cloud-texttospeech>=2.28.0",
  "gradium>=0.5.12",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.0",
  "python-multipart>=0.0.9",
  "PyYAML>=6.0.1",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0"]

[project.scripts]
mikel-tts = "tts_pipeline.cli:main"

[tool.setuptools.packages.find]
include = ["tts_pipeline*"]
