[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mikel-german-tts-pipeline"
version = "0.1.0"
description = "A Gradium-based German-learning TTS pipeline with partitioned datasets and section audio builders."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "gradium>=0.5.12",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0"]

[project.scripts]
mikel-tts = "tts_pipeline.cli:main"

[tool.setuptools.packages.find]
include = ["tts_pipeline*"]
